--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Romeo Mugisha</h1>
-    <img src="images/myimage.jpg" alt="Romeo Mugisha" width="400">
+    <img src="images/romeo.jpg" alt="Romeo Mugisha" width="400">
     <h2>My information</h2>
     <dl>
         <dt>Student number</dt>
@@ -17,7 +17,7 @@
         <dt>Course code</dt>
         <dd>MTM6201 Web Development II</dd>
         <dt>Interesting fact about me</dt>
-        <dd>My favorite sport is basketball</dd>    
+        <dd>My favorite sport is basketball.</dd>    
     </dl>
         
 
